fixed bubble scaling on mobile

--- a/assets/scss/components/layout/_string.scss
+++ b/assets/scss/components/layout/_string.scss
@@ -71,7 +71,11 @@
     text-align: center;
 
     @include media-small {
-      padding: 0;
+      padding: 0.7rem 0.5rem;
+      font-size: 1rem;
+      margin-right: 0.8rem;
+      width: 2.7rem;
+      height: 2.7rem;
     }
 
     &--hidden {
